# HT-IBKR-Integrations

./: .gitignore  02_managed_accounts.py  03_account_summary.py  Instrument_US.txt  README.md  bar_sample.json  bar_sample.txt  constants.py  pyproject.toml  requirements.txt
DATA/: AAPL_1min_20251021--16-26.csv  AMZN_1min_20251021--16-43.csv  TSLA_1min_20251021--16-27.csv
Test_Robert/: 01_connect.py  04_historical_prices_1day.py  05_historical_prices_1year.py
app/: __init__.py  config.json  loadstrategy.py  main.py
app/core/: __init__.py  config.json  config.py  ibapi.py  ibapiconnector.py  log.py  sqllite.py  table_definitions.sql
app/core/sql/: table_definitions.sql
app/data/: instrument.py  strategy.py
app/dto/: market_dto.py  scanner_dto.py  strategie_dto.py  table_definitions.sql
app/services/: ContractData.py  market.py  order.py  scanner.py
app/strategies/: Stock_eu_de.json  Stock_us.json
app/utils/: __init__.py  ibapiconnector.py  logger.py  sqllite.py  sqllitemanager.py
ht_tools/: __init__.py  config.json  main.py
ht_tools/core/: connector.py
ht_tools/examples/: connect_to_tws.py  logger_demo.py
ht_tools/tests/test_core/: test_setup.py
ht_tools/utils/: __init__.py  helpers.py  logger.py  logger1.py
log/: scanner.xml
samples_API/: Program.py
