[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ht-tools"
version = "0.1.1"
description = "Utilities and tools for algorithmic trading using IBKR TWS API"
readme = "README.md"
authors = [
    { name = "Robert Boivin", email = "your_email@example.com" },
    { name = "Gregory Delespes", email = "your_email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "protobuf==5.29.3",
    "ibapi @ file:///C:/TWS%20API/source/pythonclient"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]

[project.urls]
Homepage = "https://github.com/yourusername/HT-IBKR-INTEGRATIONS"
Repository = "https://github.com/yourusername/HT-IBKR-INTEGRATIONS"

[tool.setuptools.packages.find]
where = ["."]
include = ["ht_tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --strict-config"

[project.scripts]
ht-tools = "ht_tools:version"
