[project]
name = "ht-ibkr-integrations"
version = "0.1.0"
description = "Utilities and tools for algorithmic trading using IBKR TWS API"
authors = [
    { name = "Robert Boivin", email = "your_email@example.com" },
    { name = "Gregory Delespes", email = "gregory.delespes@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (==2.2)",
    "protobuf (==5.29.3)",
    "ibapi (>=9.81.1.post1,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
